--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.44.4",
     "@vitejs/plugin-react": "^4.3.1",
     "capacitor-plugin-safe-area": "^3.0.3",
     "class-variance-authority": "^0.7.0",
