--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/core": "^6.1.1",
     "@capacitor/ios": "^6.1.1",
     "@capacitor/status-bar": "^6.0.0",
+    "@excalidraw/excalidraw": "^0.17.6",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -40,9 +41,9 @@
     "framer-motion": "^11.3.17",
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.439.0",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
