--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.0",
     "@supabase/supabase-js": "^2.44.4",
+    "@tanstack/react-table": "^8.21.2",
     "@vitejs/plugin-react": "^4.3.1",
     "capacitor-plugin-safe-area": "^3.0.3",
     "class-variance-authority": "^0.7.0",
@@ -40,12 +44,15 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.3.17",
     "hamburger-react": "^2.5.1",
-    "lucide-react": "^0.439.0",
+    "lucide-react": "^0.477.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.25.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tldraw": "^3.8.1"
