--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.0",
     "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-table": "^8.21.2",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "capacitor-plugin-safe-area": "^3.0.3",
     "class-variance-authority": "^0.7.0",
@@ -55,7 +57,8 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "tldraw": "^3.8.1"
+    "tldraw": "^3.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.1",
